--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "21.1.2"
 
     defaultConfig {
-        applicationId "com.app.ala.tunerstudio"
+        applicationId "com.studio.aal.tunerstudio"
         minSdkVersion 19
         targetSdkVersion 21
         versionCode 1
@@ -15,9 +15,6 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-        debug{
-            debuggable true
         }
     }
 }
